# QTeletextMaker

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  on-manual.yml  on-push.yml  on-release.yml  prepare.yml  release.yml
qteletextmaker/: mainwindow.cpp
qteletextwidget/: CMakeLists.txt  levelonecommands.cpp  mainwidget.cpp
